# ai-agents

./: .gitignore  AI_AGENTS_ROADMAP.md
phase1/: README.md  chat.py  extract.py  pyproject.toml  step1_hello.py  step2_memory.py  step3_system.py  step4_tool.py  step5_loop.py  step6_extract.py
phase2/: README.md  agent.py  pyproject.toml  seed_db.py  seed_elastic.py  tools.py
phase3/: README.md  answer.py  chunking.py  embeddings.py  eval_generation.py  eval_retrieval.py  index.py  loader.py  main.py  pyproject.toml  rerank.py  results.md  retrieve.py
phase3/corpus/: employee-handbook.md  returns-refunds.md  shipping-delivery.md  warranty.md
phase3/golden/: golden_set.jsonl
