[project]
name = "phase3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "elasticsearch==8.15.1",
    "elasticsearch-dsl==8.15",
    "fastembed>=0.8.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.3",
]
